add weather plugin

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ comments: false
     <div class="collection-head">
       <div class="container">
         <div class="columns">
-          <div class="column two-thirds">
+          <div class="column two-thirds page-title">
             <div class="collection-title">
               <h1 class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></h1>
               <div class="collection-info">
@@ -35,8 +35,8 @@ comments: false
             </div>
           </div>
           <div class="column one-third mobile-hidden">
-            <div class="collection-title">
-              {% include sidebar-qrcode.html %}
+            <div class="weather-info">
+              {% include sidebar-weather.html %}
             </div>
           </div>
         </div>
